test/1.2/errors/T_EAVPARAM.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
import "testing.dml";

bank b {
    // Field size cannot depend on field index
    register r size 4 @ undefined {
        field f[i in 0..1]
            /// ERROR EFARRSZ
            @ [$i*3 : $i*2];
    }
}
